<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:orientation="vertical"
  android:layout_width="fill_parent">

    <TextView 
       	android:layout_height="wrap_content"
       	android:layout_width="wrap_content"
       	android:id="@+id/textPolicy" 
	    android:text="@string/textPolicy"
       	android:textStyle="bold" 
       	android:textSize="20sp"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textInsured"
        android:text="@string/textInsured"
        android:textSize="20sp"/>

    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" 
        android:id="@+id/textInsured2"
        android:text="@string/textInsured2"
        android:textSize="20sp"/>

</LinearLayout>